samples/_failures_safe/1761669254_cb4458_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ed0ef96.c: In function ‘main’:
./samples/SAFE/__tmp_5ed0ef96.c:153:25: error: missing terminating " character
  153 |         fprintf(stderr, "Error reading
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_5ed0ef96.c:153:9: error: expected expression at end of input
  153 |         fprintf(stderr, "Error reading
      |         ^~~~~~~
./samples/SAFE/__tmp_5ed0ef96.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5ed0ef96.c:153:9: error: expected declaration or statement at end of input
